Fixed account no orders text

--- a/frontend/app/views/spree/users/show.html.erb
+++ b/frontend/app/views/spree/users/show.html.erb
@@ -69,7 +69,7 @@
         </tbody>
       </table>
     <% else %>
-      <div class="alert alert-info" role="alert"><%= Spree.t(:you_have_no_orders_yet) %></div>
+      <p class="text-center"><%= Spree.t(:you_have_no_orders_yet) %></p>
     <% end %>
     <br />
   </div>
