[SD-808] Order confirmation - there's no space between navbar and check mark sign

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/show.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/show.scss
@@ -5,8 +5,10 @@
   & > .order-show-check-mark {
     color: $secondary-color;
     margin-bottom: 25px;
+    margin-top: 27px;
     @include media-breakpoint-up(sm) {
       margin-bottom: 42px;
+      margin-top: 84px;
     }
   }
 
