--- a/frontend/app/views/spree/orders/_line_item_data.html.erb
+++ b/frontend/app/views/spree/orders/_line_item_data.html.erb
@@ -4,7 +4,7 @@
   <% additional_classes = "d-none d-lg-table-cell" %>
 <% end %>
 
-<div class="shopping-cart-item-price <%= additional_classes %>" data-hook="cart_item_price">
+<div class="shopping-cart-item-price mb-2 <%= additional_classes %>" data-hook="cart_item_price">
   <%= line_item.single_money.to_html %>
 </div>
 <div class="shopping-cart-item-quantity <%= additional_classes %>" data-hook="cart_item_quantity">
