--- a/frontend/app/views/spree/orders/_line_item.html.erb
+++ b/frontend/app/views/spree/orders/_line_item.html.erb
@@ -10,14 +10,14 @@
       <% end %>
     </div>
     <div class="d-table-cell shopping-cart-item-description align-middle" data-hook="cart_item_description">
-      <h4 class="item-title m-0"><%= link_to line_item.name, spree.product_path(variant.product) %></h4>
+      <h4 class="item-title mb-1 mb-lg-0"><%= link_to line_item.name, spree.product_path(variant.product) %></h4>
       <% if line_item.insufficient_stock? %>
         <span class="out-of-stock">
           <%= Spree.t(:out_of_stock) %>&nbsp;&nbsp;<br />
         </span>
       <% end %>
       <% if variant.option_values.present? %>
-      <ul class="item-details-list mb-0" data-hook="line_item_description">
+      <ul class="item-details-list m-0 mb-2" data-hook="line_item_description">
         <% variant.option_values.sort { |ov| ov.option_type.position }.each do |ov| %>
           <li class="item-details">
             <% # TODO: rework option values so options_text method can be used here %>
