--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
@@ -505,6 +505,7 @@
       }
 
       @include media-breakpoint-up(lg) {
+        height: 100%;
         padding: 0;
         max-width: 380px;
         align-self: flex-end;
