--- a/backend/app/views/spree/admin/products/_add_stock_form.html.erb
+++ b/backend/app/views/spree/admin/products/_add_stock_form.html.erb
@@ -4,9 +4,7 @@
   </h1>
 </div>
 <% content_for :page_actions do %>
-  <% if frontend_available? %>
-    <%= button_link_to Spree.t(:preview_product), product_url(@product), { class: "btn-outline-secondary", icon: 'eye-open', id: 'admin_preview_product', target: :_blank } %>
-  <% end %>
+  <%= product_preview_link(@product) %>
 <% end %>
 <div class="card-body">
   <%= form_for [:admin, Spree::StockMovement.new], url: admin_stock_items_path do |f| %>
