--- a/backend/app/views/spree/admin/stores/_form.html.erb
+++ b/backend/app/views/spree/admin/stores/_form.html.erb
@@ -78,6 +78,11 @@
       <%= f.select :default_currency, currency_options(@store.default_currency) %>
       <%= f.error_message_on :default_currency %>
     <% end %>
+    <%= f.field_container :default_locale, class: ['form-group'] do %>
+      <%= f.label :default_locale, Spree.t('i18n.language') %>
+      <%= f.select :default_locale, options_from_collection_for_select(all_locales_options, :last, :first, @store.default_locale) %>
+      <%= f.error_message_on :default_locale %>
+    <% end %>
   </div>
 </div>
 
@@ -112,4 +117,5 @@
 
 <script>
   $('#store_default_currency').select2();
+  $('#store_default_locale').select2();
 </script>
