--- a/backend/app/views/spree/admin/stores/_form.html.erb
+++ b/backend/app/views/spree/admin/stores/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="card">
     <div class="card-header">
       <h1 class="card-title mb-0 h5">
-        Basic Information
+        <%= Spree.t(:basic_information) %>
       </h1>
     </div>
     <div class="card-body">
@@ -13,7 +13,7 @@
         <%= f.error_message_on :name %>
       <% end %>
       <%= f.field_container :url, class: ['form-group'] do %>
-        <%= f.label :url, Spree.t(:url)  %>
+        <%= f.label :url, raw(Spree.t(:url) + required_span_tag)  %>
         <%= f.text_field :url, class: 'form-control', required: true %>
         <%= f.error_message_on :url %>
       <% end %>
@@ -25,12 +25,12 @@
   <div class="card">
     <div class="card-header">
       <h1 class="card-title mb-0 h5">
-        SEO
+        <%= Spree.t(:seo) %>
       </h1>
     </div>
     <div class="card-body">
       <%= f.field_container :seo_title, class: ['form-group'] do %>
-        <%= f.label :seo_title, Spree.t(:seo_title)  %>
+        <%= f.label :seo_title, Spree.t(:seo_title) %>
         <%= f.text_field :seo_title, class: 'form-control' %>
         <%= f.error_message_on :seo_title %>
       <% end %>
@@ -52,14 +52,20 @@
   <div class="card">
     <div class="card-header">
       <h1 class="card-title mb-0 h5">
-        Emails
+        <%= Spree.t(:email).pluralize %>
       </h1>
     </div>
     <div class="card-body">
       <%= f.field_container :mail_from_address, class: ['form-group'] do %>
-        <%= f.label :mail_from_address, Spree.t(:mail_from_address)  %>
+        <%= f.label :mail_from_address, raw(Spree.t(:mail_from_address)  + required_span_tag) %>
         <%= f.text_field :mail_from_address, class: 'form-control', required: true %>
         <%= f.error_message_on :mail_from_address %>
+      <% end %>
+
+      <%= f.field_container :customer_support_email, class: ['form-group'] do %>
+        <%= f.label :customer_support_email, Spree.t(:customer_support_email) %>
+        <%= f.text_field :customer_support_email, class: 'form-control' %>
+        <%= f.error_message_on :customer_support_email %>
       <% end %>
     </div>
   </div>
@@ -69,7 +75,7 @@
 <div class="card">
   <div class="card-header">
     <h1 class="card-title mb-0 h5">
-      Internationalization
+      <%= Spree.t(:internationalization) %>
     </h1>
   </div>
   <div class="card-body">
@@ -91,7 +97,7 @@
 <div class="card">
   <div class="card-header">
     <h1 class="card-title mb-0 h5">
-      Social
+      <%= Spree.t(:social) %>
     </h1>
   </div>
   <div class="card-body">
