[SD-843] Adds scroll option to mobile navbar

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/mobile_navigation.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/mobile_navigation.scss
@@ -34,6 +34,10 @@
     }
   }
 
+  &-overflow {
+    overflow: auto;
+  }
+
   &-list {
     padding-top: $spree-header-mobile-height;
     @include media-breakpoint-up(sm) {
