--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/mobile_navigation.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/mobile_navigation.scss
@@ -17,6 +17,8 @@
   }
   &-list, &-sublist {
     margin: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
     padding: 0 19px;
     &-item {
       padding: 16px 0;
@@ -34,10 +36,6 @@
     }
   }
 
-  &-overflow {
-    overflow: auto;
-  }
-
   &-list {
     padding-top: $spree-header-mobile-height;
     @include media-breakpoint-up(sm) {
@@ -46,7 +44,6 @@
   }
 
   &-sublist {
-    overflow: auto;
     top: 0;
     bottom: 0;
     left: 0;
