[SD-843] set overflow-y for mobile navigation list

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/mobile_navigation.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/mobile_navigation.scss
@@ -41,6 +41,9 @@
     @include media-breakpoint-up(sm) {
       padding-top: $spree-header-tablet-height;
     }
+    &-subcategory-shown {
+      overflow-y: hidden;
+    }
   }
 
   &-sublist {
