[SD-785] Rapidly clicking on PDP'S Quantity + or - zoom in the page - Mobile issue

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
@@ -227,6 +227,7 @@
         border-width: 1px !important;
         border-style: solid;
         color: color-yiq($input-background);
+        touch-action: manipulation;
         @include media-breakpoint-up(sm) {
           height: 51.4px;
           font-size: font-px-to-rem(24px);
