[SD-844] Adds required fields annotation to address form

--- a/frontend/app/views/spree/addresses/_form.html.erb
+++ b/frontend/app/views/spree/addresses/_form.html.erb
@@ -21,3 +21,5 @@
       <%= address_field(address_form, field.to_sym, address_id) %>
     </div>  <% end %>
 <% end %>
+
+<p class="text-right text-uppercase mb-5 checkout-content-inner-field">*<%= Spree.t(:required_fields) %></p>
