--- a/frontend/app/views/spree/shared/_login.html.erb
+++ b/frontend/app/views/spree/shared/_login.html.erb
@@ -4,7 +4,7 @@
     <div id="password-credentials" class="mb-4">
       <div class="form-group mb-4">
         <p class="form-group checkout-content-inner-field">
-          <%= f.email_field :email, class: 'spree-flat-input', placeholder: Spree.t(:email), autofocus: true %>
+          <%= f.email_field :email, class: 'spree-flat-input', placeholder: Spree.t(:email), autofocus: true, value: params.dig(:spree_user, :email) %>
         </p>
       </div>
       <div class="form-group mb-4">
