--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/index.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/index.scss
@@ -133,6 +133,12 @@
         }
       }
     }
+    &-scroller {
+      @include media-breakpoint-up('lg') {
+        height: calc(100vh - #{$spree-plp-filter-desktop-position});
+        overflow: auto;
+      }
+    }
   }
 
   &-sort {
