--- a/core/app/views/spree/order_mailer/_subtotal.html.erb
+++ b/core/app/views/spree/order_mailer/_subtotal.html.erb
@@ -1,8 +1,13 @@
 <tr>
-  <td class="six sub-columns">
-    <%= Spree.t('order_mailer.subtotal') %>
+  <td class="purchase_footer" valign="middle"></td>
+  <td class="purchase_footer" valign="middle">
+    <p class="f-fallback purchase_total purchase_total--label">
+      <%= Spree.t('order_mailer.subtotal') %>
+    </p>
   </td>
-  <td class="six sub-columns last right">
-    <%= order.display_item_total %>
+  <td class="purchase_footer" valign="middle">
+    <p class="f-fallback purchase_total">
+      <%= order.display_item_total %>
+    </p>
   </td>
 </tr>
