--- a/core/app/views/spree/order_mailer/_total.html.erb
+++ b/core/app/views/spree/order_mailer/_total.html.erb
@@ -1,8 +1,13 @@
 <tr>
-  <td class="six sub-columns">
-    <strong><%= Spree.t('order_mailer.total') %></strong>
+  <td></td>
+  <td>
+    <p class="f-fallback purchase_total purchase_total--label">
+      <strong><%= Spree.t('order_mailer.total') %></strong>
+    </p>
   </td>
-  <td class="six sub-columns last right">
-    <strong><%= order.display_total %></strong>
+  <td>
+    <p class="f-fallback purchase_total">
+      <strong><%= order.display_total %></strong>
+    </p>
   </td>
 </tr>
