--- a/core/app/views/spree/order_mailer/confirm_email.text.erb
+++ b/core/app/views/spree/order_mailer/confirm_email.text.erb
@@ -1,4 +1,4 @@
-<%= Spree.t('order_mailer.confirm_email.dear_customer') %>
+<%= Spree.t('order_mailer.confirm_email.dear_customer', name: @order.name || Spree.t('customer')) %>
 
 <%= Spree.t('order_mailer.confirm_email.instructions') %>
 
