--- a/core/app/views/spree/shipment_mailer/shipped_email.text.erb
+++ b/core/app/views/spree/shipment_mailer/shipped_email.text.erb
@@ -1,4 +1,4 @@
-<%= Spree.t('shipment_mailer.shipped_email.dear_customer') %>
+<%= Spree.t('shipment_mailer.shipped_email.dear_customer', name: @shipment.order.name || Spree.t('customer')) %>
 
 <%= Spree.t('shipment_mailer.shipped_email.instructions', number: @shipment.order.number) %>
 
