[SE-5] Add postmark template to cancell order email

--- a/core/app/views/spree/shared/purchased_items_table/_subtotal.html.erb
+++ b/core/app/views/spree/shared/purchased_items_table/_subtotal.html.erb
@@ -2,7 +2,7 @@
   <td class="purchase_footer" valign="middle"></td>
   <td class="purchase_footer" valign="middle">
     <p class="f-fallback purchase_total purchase_total--label">
-      <%= Spree.t('subtotal') %>
+      <%= Spree.t('order_mailer.subtotal') %>
     </p>
   </td>
   <td class="purchase_footer" valign="middle">
