--- a/core/app/views/spree/shared/purchased_items_table/_total.html.erb
+++ b/core/app/views/spree/shared/purchased_items_table/_total.html.erb
@@ -2,7 +2,7 @@
   <td></td>
   <td>
     <p class="f-fallback purchase_total purchase_total--label">
-      <strong><%= Spree.t('total') %></strong>
+      <strong><%= Spree.t('order_mailer.total') %></strong>
     </p>
   </td>
   <td>
