--- a/core/app/views/layouts/spree/base_mailer.html.erb
+++ b/core/app/views/layouts/spree/base_mailer.html.erb
@@ -7,56 +7,38 @@
 
     <%= render partial: 'spree/shared/base_mailer_postmark_stylesheets' %>
   </head>
-<body>
-  <span class="preheader">This is a receipt for your recent purchase on {{ purchase_date }}. No payment is due with this receipt.</span>
-  <table class="email-wrapper" width="100%" cellpadding="0" cellspacing="0" role="presentation">
-    <tr>
-      <td align="center">
-        <table class="email-content" width="100%" cellpadding="0" cellspacing="0" role="presentation">
-          <tr>
-            <td class="email-masthead">
-              <a href="https://example.com" class="f-fallback email-masthead_name">
-                [Product Name]
-              </a>
-            </td>
-          </tr>
-          <!-- Email Body -->
-          <tr>
-            <td class="email-body" width="570" cellpadding="0" cellspacing="0">
-              <table class="email-body_inner" align="center" width="570" cellpadding="0" cellspacing="0" role="presentation">
-                <!-- Body content -->
-                <tbody>
-                <tr>
-                  <td class="content-cell">
-                    <div class="f-fallback">
-                      <%= yield %>
-                    </div>
-                  </td>
-                </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <table class="email-footer" align="center" width="570" cellpadding="0" cellspacing="0" role="presentation">
-                <tr>
-                  <td class="content-cell" align="center">
-                    <p class="f-fallback sub align-center">&copy; 2019 [Product
-                      Name]. All rights reserved.</p>
-                    <p class="f-fallback sub align-center">
-                      [Company Name, LLC]
-                      <br>1234 Street Rd.
-                      <br>Suite 1234
-                    </p>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-</body>
+  <body>
+    <span class="preheader">This is a receipt for your recent purchase on {{ purchase_date }}. No payment is due with this receipt.</span>
+    <table class="email-wrapper" width="100%" cellpadding="0" cellspacing="0" role="presentation">
+      <tr>
+        <td align="center">
+          <table class="email-content" width="100%" cellpadding="0" cellspacing="0" role="presentation">
+            <%= render partial: 'spree/shared/base_mailer_header' %>
+            <!-- Email Body -->
+            <tr>
+              <td class="email-body" width="570" cellpadding="0" cellspacing="0">
+                <table class="email-body_inner" align="center" width="570" cellpadding="0" cellspacing="0" role="presentation">
+                  <!-- Body content -->
+                  <tbody>
+                  <tr>
+                    <td class="content-cell">
+                      <div class="f-fallback">
+                        <%= yield %>
+                      </div>
+                    </td>
+                  </tr>
+                  </tbody>
+                </table>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <%= render partial: 'spree/shared/base_mailer_footer' %>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
