--- a/core/app/views/spree/order_mailer/cancel_email.text.erb
+++ b/core/app/views/spree/order_mailer/cancel_email.text.erb
@@ -1,4 +1,4 @@
-<%= Spree.t('order_mailer.cancel_email.dear_customer') %>
+<%= Spree.t('order_mailer.cancel_email.dear_customer', name: name_for(@order)) %>
 
 <%= Spree.t('order_mailer.cancel_email.instructions') %>
 
