--- a/backend/app/views/spree/admin/variants/_form.html.erb
+++ b/backend/app/views/spree/admin/variants/_form.html.erb
@@ -24,6 +24,11 @@
         <%= f.text_field :price, value: number_to_currency(@variant.price, unit: ''), class: 'form-control' %>
       </div>
 
+      <div class="form-group" data-hook="compare_at_price">
+        <%= f.label :compare_at_price, Spree.t(:compare_at_price) %>
+        <%= f.text_field :compare_at_price, value: number_to_currency(@variant.compare_at_price, unit: ''), class: 'form-control' %>
+      </div>
+
       <div class="form-group" data-hook="cost_price">
         <%= f.label :cost_price, Spree.t(:cost_price) %>
         <%= f.text_field :cost_price, value: number_to_currency(@variant.cost_price, unit: ''), class: 'form-control' %>
