--- a/core/app/views/spree/shared/purchased_items_table/_line_item.html.erb
+++ b/core/app/views/spree/shared/purchased_items_table/_line_item.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td class="purchase_image">
     <% if frontend_available? %>
-      <%= link_to(image_tag(variant_image_url(line_item.variant)), spree.product_url(line_item.variant.product)) %>
+      <%= link_to(image_tag(variant_image_url(line_item.variant)), spree.product_url(line_item.product)) %>
     <% else %>
       <%= image_tag(variant_image_url(line_item.variant)) %>
     <% end %>
@@ -10,9 +10,9 @@
     <strong>
       <span class="f-fallback">
         <% if frontend_available? %>
-          <%= link_to raw(line_item.variant.product.name), spree.product_url(line_item.variant.product) %>
+          <%= link_to raw(line_item.name), spree.product_url(line_item.product) %>
         <% else %>
-          <%= raw(line_item.variant.product.name) %>
+          <%= raw(line_item.name) %>
         <% end %>
       </span>
     </strong>
