Added multi store support to Spree core emails
Emails are now personalized based on the Store they are sent from.

Emails aren't always sent from controllers (eg. background job) so `Spree::Store.curent` won't work.

--- a/core/app/views/spree/reimbursement_mailer/reimbursement_email.html.erb
+++ b/core/app/views/spree/reimbursement_mailer/reimbursement_email.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  <%= Spree.t('reimbursement_mailer.reimbursement_email.dear_customer', name: name_for(@reimbursement.order)) %>
+  <%= Spree.t('reimbursement_mailer.reimbursement_email.dear_customer', name: name_for(@order)) %>
 </h1>
 <p>
   <%= Spree.t('reimbursement_mailer.reimbursement_email.instructions') %>
