Font awesome import

--- a/frontend/app/assets/stylesheets/spree/frontend/application.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/application.scss
@@ -53,3 +53,4 @@
 @import "spree/frontend/views/spree/shared/color_select";
 @import "spree/frontend/views/spree/shared/dropdown";
 @import "spree/frontend/views/spree/shared/delete_address_popup";
+@import "font-awesome";
