adding social media bar to the product view
this feature uses font awesome

--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -50,3 +50,9 @@
   data-related-products-id="<%= @product.slug %>"
   data-related-products-enabled="<%= @product.respond_to?(:has_related_products?) %>"
 />
+<div class="icon-bar">
+  <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fparse.com" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a> 
+  <a href="https://twitter.com/intent/tweet" class="twitter"><i class="fa fa-twitter"></i></a> 
+  <a href="https://www.linkedin.com/shareArticle?url=https%3A%2F%2Fparse.com" target="_blank"  class="linkedin"><i class="fa fa-linkedin"></i></a>
+  <a href="https://reddit.com/submit?url=https%3A%2F%2Fparse.com" target="_blank" class="reddit"><i class="fa fa-reddit"></i></a> 
+</div>
