--- a/backend/app/views/spree/admin/stores/_form.html.erb
+++ b/backend/app/views/spree/admin/stores/_form.html.erb
@@ -1,78 +1,72 @@
 <div data-hook="admin_store_form_fields">
 
-  <div class="card">
-    <div class="card-header">
-      <h1 class="card-title mb-0 h5">
-        <%= Spree.t(:basic_information) %>
-      </h1>
-    </div>
-    <div class="card-body">
-      <%= f.field_container :name, class: ['form-group'] do %>
-        <%= f.label :name, raw(Spree.t(:name) + required_span_tag) %>
-        <%= f.text_field :name, class: 'form-control', required: true %>
-        <%= f.error_message_on :name %>
-      <% end %>
-      <%= f.field_container :url, class: ['form-group'] do %>
-        <%= f.label :url, raw(Spree.t(:url) + required_span_tag)  %>
-        <%= f.text_field :url, class: 'form-control', required: true %>
-        <%= f.error_message_on :url %>
-      <% end %>
-    </div>
+<div class="card mb-4">
+  <div class="card-header">
+    <h1 class="card-title mb-0 h5">
+      <%= Spree.t(:basic_information) %>
+    </h1>
   </div>
-
-  <br />
-
-  <div class="card">
-    <div class="card-header">
-      <h1 class="card-title mb-0 h5">
-        <%= Spree.t(:seo) %>
-      </h1>
-    </div>
-    <div class="card-body">
-      <%= f.field_container :seo_title, class: ['form-group'] do %>
-        <%= f.label :seo_title, Spree.t(:seo_title) %>
-        <%= f.text_field :seo_title, class: 'form-control' %>
-        <%= f.error_message_on :seo_title %>
-      <% end %>
-      <%= f.field_container :meta_description, class: ['form-group'] do %>
-        <%= f.label :meta_description, Spree.t(:meta_description)  %>
-        <%= f.text_area :meta_description, class: 'form-control' %>
-        <%= f.error_message_on :meta_description %>
-      <% end %>
-      <%= f.field_container :meta_keywords, class: ['form-group'] do %>
-        <%= f.label :meta_keywords, Spree.t(:meta_keywords)  %>
-        <%= f.text_field :meta_keywords, class: 'form-control' %>
-        <%= f.error_message_on :meta_keywords %>
-      <% end %>
-    </div>
+  <div class="card-body">
+    <%= f.field_container :name, class: ['form-group'] do %>
+      <%= f.label :name, raw(Spree.t(:name) + required_span_tag) %>
+      <%= f.text_field :name, class: 'form-control', required: true %>
+      <%= f.error_message_on :name %>
+    <% end %>
+    <%= f.field_container :url, class: ['form-group'] do %>
+      <%= f.label :url, raw(Spree.t(:url) + required_span_tag)  %>
+      <%= f.text_field :url, class: 'form-control', required: true %>
+      <%= f.error_message_on :url %>
+    <% end %>
   </div>
+</div>
 
-  <br />
-
-  <div class="card">
-    <div class="card-header">
-      <h1 class="card-title mb-0 h5">
-        <%= Spree.t(:email).pluralize %>
-      </h1>
-    </div>
-    <div class="card-body">
-      <%= f.field_container :mail_from_address, class: ['form-group'] do %>
-        <%= f.label :mail_from_address, raw(Spree.t(:mail_from_address)  + required_span_tag) %>
-        <%= f.text_field :mail_from_address, class: 'form-control', required: true %>
-        <%= f.error_message_on :mail_from_address %>
-      <% end %>
-
-      <%= f.field_container :customer_support_email, class: ['form-group'] do %>
-        <%= f.label :customer_support_email, Spree.t(:customer_support_email) %>
-        <%= f.text_field :customer_support_email, class: 'form-control' %>
-        <%= f.error_message_on :customer_support_email %>
-      <% end %>
-    </div>
+<div class="card mb-4">
+  <div class="card-header">
+    <h1 class="card-title mb-0 h5">
+      <%= Spree.t(:seo) %>
+    </h1>
   </div>
+  <div class="card-body">
+    <%= f.field_container :seo_title, class: ['form-group'] do %>
+      <%= f.label :seo_title, Spree.t(:seo_title) %>
+      <%= f.text_field :seo_title, class: 'form-control' %>
+      <%= f.error_message_on :seo_title %>
+    <% end %>
+    <%= f.field_container :meta_description, class: ['form-group'] do %>
+      <%= f.label :meta_description, Spree.t(:meta_description)  %>
+      <%= f.text_area :meta_description, class: 'form-control' %>
+      <%= f.error_message_on :meta_description %>
+    <% end %>
+    <%= f.field_container :meta_keywords, class: ['form-group'] do %>
+      <%= f.label :meta_keywords, Spree.t(:meta_keywords)  %>
+      <%= f.text_field :meta_keywords, class: 'form-control' %>
+      <%= f.error_message_on :meta_keywords %>
+    <% end %>
+  </div>
+</div>
 
-  <br />
+<div class="card mb-4">
+  <div class="card-header">
+    <h1 class="card-title mb-0 h5">
+      <%= Spree.t(:email).pluralize %>
+    </h1>
+  </div>
+  <div class="card-body">
+    <%= f.field_container :mail_from_address, class: ['form-group'] do %>
+      <%= f.label :mail_from_address, raw(Spree.t(:mail_from_address)  + required_span_tag) %>
+      <%= f.text_field :mail_from_address, class: 'form-control', required: true %>
+      <%= f.error_message_on :mail_from_address %>
+    <% end %>
 
-<div class="card">
+    <%= f.field_container :customer_support_email, class: ['form-group'] do %>
+      <%= f.label :customer_support_email, Spree.t(:customer_support_email) %>
+      <%= f.text_field :customer_support_email, class: 'form-control' %>
+      <%= f.error_message_on :customer_support_email %>
+    <% end %>
+  </div>
+</div>
+
+<div class="card mb-4">
   <div class="card-header">
     <h1 class="card-title mb-0 h5">
       <%= Spree.t(:internationalization) %>
@@ -92,9 +86,7 @@
   </div>
 </div>
 
-  <br />
-
-<div class="card">
+<div class="card mb-4">
   <div class="card-header">
     <h1 class="card-title mb-0 h5">
       <%= Spree.t(:social) %>
@@ -119,7 +111,35 @@
   </div>
 </div>
 
-<br />
+<div class="card mb-4">
+  <div class="card-header">
+    <h1 class="card-title mb-0 h5">
+      <%= Spree.t(:footer_info) %>
+    </h1>
+  </div>
+  <div class="card-body">
+    <%= f.field_container :description, class: ['form-group'] do %>
+      <%= f.label :description, Spree.t(:description)  %>
+      <%= f.text_area :description, class: 'form-control' %>
+      <%= f.error_message_on :description %>
+    <% end %>
+    <%= f.field_container :address, class: ['form-group'] do %>
+      <%= f.label :address, Spree.t(:address)  %>
+      <%= f.text_area :address, class: 'form-control' %>
+      <%= f.error_message_on :address %>
+    <% end %>
+    <%= f.field_container :contact_email, class: ['form-group'] do %>
+      <%= f.label :contact_email, Spree.t(:contact_email)  %>
+      <%= f.text_field :contact_email, class: 'form-control' %>
+      <%= f.error_message_on :contact_email %>
+    <% end %>
+    <%= f.field_container :contact_phone, class: ['form-group'] do %>
+      <%= f.label :contact_phone, Spree.t(:contact_phone)  %>
+      <%= f.text_field :contact_phone, class: 'form-control' %>
+      <%= f.error_message_on :contact_phone %>
+    <% end %>
+  </div>
+</div>
 
 <script>
   $('#store_default_currency').select2();
