--- a/frontend/app/views/spree/products/_filters_desktop.html.erb
+++ b/frontend/app/views/spree/products/_filters_desktop.html.erb
@@ -1,4 +1,4 @@
-<% cache base_cache_key + [available_option_types, permitted_params, @taxon&.id] do %>
+<% cache base_cache_key + [available_option_types_cache_key, permitted_params, @taxon&.id] do %>
   <div id="plp-filters-accordion" class="d-none d-lg-block col-lg-3 pr-5 position-sticky h-100 plp-filters" data-hook="taxon_sidebar_navigation">
     <% @available_option_types.each do |option_type| %>
       <div class="w-100 card plp-filters-card">
