--- a/backend/app/views/spree/admin/prices/index.html.erb
+++ b/backend/app/views/spree/admin/prices/index.html.erb
@@ -1,20 +1,19 @@
-<%= render 'spree/admin/shared/product_tabs', current: 'Prices' %>
+<%= render partial: 'spree/admin/shared/product_tabs', locals: { current: :prices } %>
+
+<% content_for :page_actions do %>
+  <div class="page-actions col-6 pr-0" data-hook="toolbar">
+    <%= yield :page_actions %>
+  </div>
+  <%= product_preview_link(@product) %>
+<% end %>
 
 <form>
-      <div class="form-group has-feedback">
-        <input class="form-control input-lg" placeholder="<%= Spree.t('variant_prices_search_placeholder') %>" type="text" id="variant-price-search"/>
-        <span class="glyphicon glyphicon-search form-control-feedback" aria-hidden="true"></span>
-        <hr/>
-      </div>
-    </form>
+  <input class="form-control" placeholder="<%= Spree.t('variant_prices_search_placeholder') %>" type="text" id="variant-price-search"/>
+</form>
 
 <%= form_tag nil, { class: 'form-horizontal' } do %>
-
-  <div class="row" id="variant-prices">
-    <%= render 'variant_prices', variant: @product.master, panel_class: 'panel-primary' %>
-    <% @product.variants.each do |variant| %>
-      <%= render 'variant_prices', variant: variant %>
-    <% end %>
+  <div class="mt-3">
+    <%= render 'variant_prices', variant: @product.master %>
   </div>
   <div class="form-actions" data-hook="buttons">
     <%= button Spree.t('actions.update'), 'update' %>
