--- a/frontend/app/views/spree/shared/_copyright.html.erb
+++ b/frontend/app/views/spree/shared/_copyright.html.erb
@@ -1,10 +1,10 @@
 <div class="border-top footer-spree-copyright">
   <div class="container">
     <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center py-3 footer-spree-copyright-content">
-      <div>Designed and developed by</div>
+      <div>Made with love in Fort Worth, Texas</div>
       <div class="mb-1 mb-lg-0">
-        <%= link_to 'https://sparksolutions.co/', target: :blank, 'aria-label': 'Go to Spark Solutions', rel: :follow do %>
-          <%= image_tag 'spark-logo@3x.png', class: 'footer-spree-copyright-logo-spark mx-2', alt: 'Spree Commerce & Ruby on Rails developers', title: 'Spree Commerce & Ruby on Rails developers' %>
+        <%= link_to '/', target: :blank, 'aria-label': 'Go to RAQK', rel: :follow do %>
+          <%= image_tag 'spark-logo@3x.png', class: 'footer-spree-copyright-logo-spark mx-2', alt: 'RAQK the hottest designer brands at a fraction of the price', title: 'RAQK the hottest designer brands at a fraction of the price' %>
         <% end %>
       </div>
       <div class="d-none d-lg-inline-block mr-2">|</div>
