--- a/frontend/app/views/spree/shared/_footer.html.erb
+++ b/frontend/app/views/spree/shared/_footer.html.erb
@@ -33,10 +33,10 @@
           <div class="d-flex flex-column align-items-center align-items-xl-start pb-3 flex-grow-2 footer-spree-contact-note">
             <div>
               <%= current_store.name %>,
-              2382 Locust Ave<br/>
-              Long Beach, CA 90806, USA
+              3182 FM 1187<br/>
+              Burleson, TX 76028
             </div>
-            <div>Call us now: 760-673-8590</div>
+            <div>Call us now: 817-334-6655</div>
             <% if current_store.mail_from_address %>
               <div><%= Spree.t(:email) %>: <%= current_store.mail_from_address %></div>
             <% end %>
