[SD-837] Changes 'email' edit link on my account to 'account info'

--- a/frontend/app/views/spree/users/show.html.erb
+++ b/frontend/app/views/spree/users/show.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-xs-12 col-lg-4">
       <dt class="text-uppercase account-page-user-info-item-title">
-        <%= Spree.t(:email) %>
+        <%= Spree.t(:account_info) %>
         <%= link_to spree.edit_user_path(@user), class: "account-page-user-info-item-title-edit" do %>
           <%= inline_svg_tag 'edit.svg', class: "account-page-user-info-item-title-edit-img" %>
         <% end %>
