--- a/frontend/app/views/spree/products/_option_type.html.erb
+++ b/frontend/app/views/spree/products/_option_type.html.erb
@@ -13,7 +13,7 @@
             class: "product-variants-variant-values-radio",
             data: {
               "option-type-index" => index,
-              "presentation" => option_value[:presentation],
+              "presentation" => option_value[:presentation].downcase,
               "variant-id" => option_value[:variant_id]
             }
           %>
