[SD-838] Fixes filters list scroller

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/index.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/index.scss
@@ -135,7 +135,7 @@
     }
     &-scroller {
       @include media-breakpoint-up('lg') {
-        height: calc(100vh - #{$spree-plp-filter-desktop-position});
+        max-height: calc(100vh - #{$spree-plp-filter-desktop-position});
         overflow: auto;
       }
     }
