--- a/frontend/app/views/spree/shared/_change_store.html.erb
+++ b/frontend/app/views/spree/shared/_change_store.html.erb
@@ -13,7 +13,7 @@
         <% stores.each do |store| %>
           <div class="pl-3 d-flex justify-content-between align-items-center">
             <span class="flag-icon flag-icon-<%= store_country_iso(store) %>"></span>
-            <%= link_to store.default_country&.name, store.url, class: 'dropdown-item text-uppercase' %>
+            <%= link_to "#{store.default_country&.name} (#{store_currency_symbol(store.default_currency)})", store.url, class: 'dropdown-item text-uppercase' %>
           </div>
         <% end %>
       </div>
